--- a/Bai_04/css/style.css
+++ b/Bai_04/css/style.css
@@ -8,6 +8,7 @@
     width:  900px;
     margin:  auto;
     margin-top:  25px;
+    transition: 0.4s;
 }
 
 .bonnut li {
@@ -25,6 +26,8 @@
 
 .bonnd .ndchitiet.active {
 	display: block;
+    transition: 0.4s;
+
 }
 
 .bonnd .ndchitiet {
@@ -33,8 +36,10 @@
     border: 1px solid red;
     padding:  10px;
     display:  none;
+    transition: 0.4s;
 }
 
 .bonnut .btn.active{
 	background:red;
+    transition: 0.4s;
 }
